static/style.css
@font-face {
    font-family: titillium;
    src: url('font/TitilliumText25L.otf');
}

html, body {
    padding: 0;
    margin: 0;
    background-color: white;
}

a, a:visited {
    color: #de6a00 !important;
    text-decoration: none;
}

a:hover {
    color: #e58833 !important;
    text-decoration: none !important;
}

/* Startseite Map */

#map {
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    z-index: 0;
}
.leaflet-top.leaflet-left {
    top: 100px;
}
#sidebar-button i.icon-chevron-right {
    margin-left: 2px;
}
#sidebar-button i.icon-chevron-left {
    margin-left: 3px;
}
.leaflet-popup-content-wrapper {
    border-radius:7px;
}

/* Startseite Sidebar */

#sidebar {    
    position: absolute;
    top: 110px;
    bottom: 10px;
    left: -300px;
    width: 300px;
    background-color: rgba(0, 0, 0, 0.246094); 
    z-index: 101;
    border-radius:7px;
}
#sidebar-inner {    
    position: absolute;
    top: 5px;
    bottom: 5px;
    left: 5px;
    right: 5px;
    padding: 5px;
    background-color: rgba(255, 255, 255, 0.75);
    z-index: 101;
    border-radius:7px;
}
#sidebar-content {
    position: relative;
    /* overflow-y: scroll; */
}
#sidebar-content a.marked,
#sidebar-content a:hover.marked {
    color: white !important;
    background-color: #de6a00;
}

/* Projektseiten */

#localmap {
    margin-top: 80px;
}

/* Navigation */

#navcontainer {
    position: absolute;
    background-color: transaprent;
    top: 20px;
    height: 100px;    
    left: 0px;
    right: 0px;
    z-index: 10;
}
#sitenav {
    float: right;
    padding-right: 10px;
   
}
#sitenav li {
    display: inline;
    list-style: none;
    margin-left: 20px;
    font-family: titillium;
    font-size: 16px;
    color: #646464;       
}
#menu_right {   
   background-color: transparent;
   height:40px;   
   border-radius:7px;
   border-radius:7px; 
   padding-top:24px;
}

